Improving solution